Fix concept summary colours, broken in 29e82a22e2ef11ef244b69f5ac913e050fdb52a6. Fixes #234.

--- a/scss/_concept-index.scss
+++ b/scss/_concept-index.scss
@@ -68,6 +68,7 @@ span.maths
 
 .ru-search-result
 {
+    color: black;
     cursor: pointer;
     font-style: italic;
 }
